@@ -17,6 +17,7 @@ gem2deb (0.7.0) UNRELEASED; urgency=medium
       that is not /usr/bin/ruby will have been installed by hand so we don't
       want system binaries using external interpreters.
   * Add support for running the gem2deb testsuite with autopkgtest
+  * Removed hardcoded interpreter versions; use ruby-all-dev instead
 
   [ Cédric Boutillier ]
   * Make build of C extensions verbose (Closes: #721674)
